--- a/src/components/character/character.scss
+++ b/src/components/character/character.scss
@@ -1,4 +1,5 @@
 .characters__item {
+  width: 12rem;
   display: block;
   margin: 4rem 1rem 0;
   padding: 1rem;
@@ -6,9 +7,11 @@
   text-align: center;
   border-radius: 10px;
   box-shadow: 1px 1px 2px rgba(147, 153, 153, 0.56);
+
   h4 {
     padding: 0;
     margin: -1rem 0 0.5rem;
+    word-wrap: break-word;
   }
 }
 
