add dynamic loading contend

--- a/src/components/character/character.scss
+++ b/src/components/character/character.scss
@@ -1,7 +1,7 @@
 .characters__item {
   width: 12rem;
   display: block;
-  margin: 4rem 1rem 0;
+  margin: 2rem 1rem;
   padding: 1rem;
   background: #FFF;
   text-align: center;
