--- a/src/components/charactersList/charactersList.scss
+++ b/src/components/charactersList/charactersList.scss
@@ -1,9 +1,7 @@
 .content {
   max-width: 90rem;
-  /*min-width: 320px;*/
-  margin: 0 auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  margin: auto;
+  padding: 3rem 0;
   cursor: default;
 }
 
