--- a/src/components/charListAll/charListAll.scss
+++ b/src/components/charListAll/charListAll.scss
@@ -1,7 +1,7 @@
 .content {
   max-width: 90rem;
   margin: auto;
-  padding: 3rem 0;
+  padding: 1rem 0;
   cursor: default;
 }
 
@@ -9,4 +9,5 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  //transform: scale(0.5);
 }
