--- a/src/components/character/character.scss
+++ b/src/components/character/character.scss
@@ -7,6 +7,7 @@
   text-align: center;
   border-radius: 10px;
   box-shadow: 1px 1px 2px rgba(147, 153, 153, 0.56);
+  cursor: pointer;
 
   h4 {
     padding: 0;
