--- a/src/components/modalChar/modalChar.scss
+++ b/src/components/modalChar/modalChar.scss
@@ -1,11 +1,34 @@
 .modal {
+  opacity: 0;
   height: 100vh;
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 4;
+  z-index: 20;
+}
+
+.land-enter {
+  opacity: 0;
+}
+
+.land-enter-active {
+  opacity: 1;
+  transition: all 500ms ease-in;
+}
+
+.land-exit {
+  opacity: 1;
+}
+
+.land-exit-active {
+  opacity: 0;
+  transition: all 500ms ease-in;
+}
+
+.land-enter-done {
+  opacity: 1;
 }
 
 .modal-char {
